@@ -1,3 +1,8 @@
+2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* sdas/asxxsrc/assubr.c:
+	  Fix detailed error messages in sdas.
+
 2022-03-23 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
 	* support/regression/tests/bitint.c,
